test_inputs/invalid/03_bad_kernel_shape.mt
@triton.jit
def malformed x): {
  y = x;
}
